<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8">

    <TextView
        android:id="@+id/tvRule"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Gold1"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGoldPackTopic" />

    <TextView
        android:id="@+id/tvRule5"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Gold2"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRule1Note5" />

    <TextView
        android:id="@+id/tvRule6"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Gold3"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRule1Note6" />

    <TextView
        android:id="@+id/tvRule7"
        android:layout_width="210dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Gold4"
        android:textColor="#000000"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.259"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRule1Note7" />

    <ImageView
        android:id="@+id/ivTick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRule1Note5"
        app:layout_constraintEnd_toStartOf="@+id/tvRule"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_action_name" />

    <ImageView
        android:id="@+id/ivTick5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRule1Note6"
        app:layout_constraintEnd_toStartOf="@+id/tvRule5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRule5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_action_name" />

    <ImageView
        android:id="@+id/ivTick6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toStartOf="@+id/tvRule6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRule6"
        app:srcCompat="@drawable/ic_action_name" />

    <ImageView
        android:id="@+id/ivTick7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toStartOf="@+id/tvRule7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRule7"
        app:srcCompat="@drawable/ic_action_name" />

    <TextView
        android:id="@+id/tvRule1Note5"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Gold1Note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRule"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvRule1Note6"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Gold2Note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRule5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvRule1Note7"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Gold3Note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRule6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvRule1Note8"
        android:layout_width="315dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Gold4Note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRule7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvGoldPackTopic"
        android:layout_width="279dp"
        android:layout_height="47dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Packeg_hedding"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <Button
        android:id="@+id/btnMonth6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/radient_pink"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Packeg_6m_btn"
        android:textColor="#fff"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGoldPackTopic"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/btnMonth1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/radient_pink"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Packeg_1m_btn"
        android:textColor="#fff"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRule"
        app:layout_constraintEnd_toStartOf="@+id/btnMonth6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGoldPackTopic"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/btnMonth12"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/radient_pink"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Packeg_12m_btn"
        android:textColor="#fff"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/btnMonth6"
        app:layout_constraintTop_toBottomOf="@+id/tvGoldPackTopic"
        app:layout_constraintVertical_bias="0.406" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="102dp"
        app:layout_constraintBottom_toTopOf="@+id/tvGoldPackTopic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>