<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_color">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="206dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_Logo"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="361dp"
        android:layout_height="82dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_login_description"
        android:textAlignment="center"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <Button
        android:id="@+id/btnPhone"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="264dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_btnGest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="192dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_btnPhone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPhone"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnInstagram"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_btnFacebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_btnGoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInstagram"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>