<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/tvTopic2"
        android:layout_width="250dp"
        android:layout_height="58dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_topic2"
        android:textColor="#000"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063" />

    <TextView
        android:id="@+id/tvNumberDescription"
        android:layout_width="356dp"
        android:layout_height="79dp"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_numberadd_description"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="335dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/radient_btn"
        android:fontFamily="@font/cherrycreamsoda"
        android:text="@string/K_btnContinue"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumberDescription"
        app:layout_constraintVertical_bias="0.483" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="289dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="@font/cherrycreamsoda"
        android:hint="@string/K_phone_num"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/tvNumberDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTopic2" />
</androidx.constraintlayout.widget.ConstraintLayout>